src/main/java/com/example/shortudy/global/error/ErrorCode.java
package com.example.shortudy.global.error;

public enum ErrorCode {
    UserNotFoundException,
    ResourceNotFoundException,
    InvalidPasswordException,
    EmailAlreadyExistsException



}
